--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,11 +3,87 @@ html, body {
 	margin: 0;
 	width: 100%;
 	height: 100%;
+	font-family: 'VCR OSD Mono';
+	color: white;
+	overflow: hidden;
+}
+
+h2{
+	margin: 0; 
+}
+
+hr.style-3 {
+	border-top: 1px dashed #8c8b8b;
+	display: inline-block;
+	width: 150px;
+	margin-bottom: 60px;
+	margin-left: 15px;
+}
+
+
+/*Parent*/
+#horiz-scroll-div{
+	overflow: hidden;
+	width: 100%;
+	
+}
+
+/*Child*/
+#nav-container{
+	text-overflow: none;
+	white-space: nowrap;
+	overflow-x: hidden;
+	width: 100%;
+}
+
+.subject-nav{
+	font-family: 'Playfair Display', serif;
+	font-style: italic;
+	letter-spacing: 0px;
+	font-size:  12vw !important;
+	transition: all 0.5s cubic-bezier(0,.82,.4,1);
+	opacity: 0.3;
+}
+
+.subject-nav:hover{
+	letter-spacing: 5px;
+	transform: scale(1.05);
+	opacity: 1.0;
+	cursor: pointer;
 }
 
 #background{
 	width: 100%;
-	height: 100%;
-	background: url(../css/img/duotone.png);
+	height: 220%;
+	background: url(../css/img/duotonered.png);
 	background-size: cover;
+	position: absolute;
+	z-index: -100;
+	-webkit-filter: brightness(0.7);
+	filter: brightness(0.7);
+	transition: all 2s cubic-bezier(0.645, 0.045, 0.355, 1);
+	animation-name: brightup;
+	animation-duration: 1s;
+}
+
+@keyframes brightup{
+	from {-webkit-filter: brightness(0.0);
+	filter: brightness(0.0);}
+	to {-webkit-filter: brightness(0.7);
+	filter: brightness(0.7);}
+}
+
+
+#background video{
+	width: 115%;
+	height: 100%;
+}
+
+
+#rl-logo{
+/*	padding: 15px;
+	border: 10px solid white;
+	border-radius: 20px;*/
+	opacity: 1;
+	letter-spacing: 0.1em;
 }
