--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -20,12 +20,14 @@ hr.style-3 {
 	margin-left: 15px;
 }
 
+#ui-overlay-container{
+	transition: all 1.3s cubic-bezier(0.86, 0, 0.07, 1);
+}
 
 /*Parent*/
 #horiz-scroll-div{
 	overflow: hidden;
 	width: 100%;
-	
 }
 
 /*Child*/
@@ -34,6 +36,29 @@ hr.style-3 {
 	white-space: nowrap;
 	overflow-x: hidden;
 	width: 100%;
+}
+
+
+#resume-container{
+	position: absolute;
+	top: 1000%;
+	transition: all 1.4s cubic-bezier(0.23, 1, 0.32, 1);
+	opacity: 0;
+}
+
+#up-arrow{
+	animation: teaseup 5s infinite;
+	animation-timing-function: ease-in-out;
+}
+
+#up-arrow:hover{
+	cursor: pointer;
+}
+
+@keyframes teaseup{
+	0%{top: 0px;}
+	50%{top: 20px;} 
+	100%{top: 0px;}
 }
 
 .subject-nav{
@@ -61,7 +86,7 @@ hr.style-3 {
 	z-index: -100;
 	-webkit-filter: brightness(0.7);
 	filter: brightness(0.7);
-	transition: all 2s cubic-bezier(0.645, 0.045, 0.355, 1);
+	transition: all 1.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 	animation-name: brightup;
 	animation-duration: 1s;
 }
@@ -80,7 +105,7 @@ hr.style-3 {
 }
 
 
-#rl-logo{
+.rl-logo{
 /*	padding: 15px;
 	border: 10px solid white;
 	border-radius: 20px;*/
