--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,6 +8,16 @@ html, body {
 	overflow: hidden;
 }
 
+a{
+	text-decoration: none;
+	color: white;
+}
+
+a:hover{
+	color: white;
+	text-decoration: none;
+}
+
 h2{
 	margin: 0; 
 }
@@ -46,13 +56,21 @@ hr.style-3 {
 	opacity: 0;
 }
 
+#resume-frame{
+	margin-top: 10px;
+}
+
 #up-arrow{
+	opacity: 0.3;
+	transform: scale(2);
+	transition: all 0.5s;
 	animation: teaseup 5s infinite;
 	animation-timing-function: ease-in-out;
 }
 
 #up-arrow:hover{
 	cursor: pointer;
+	opacity: 1;
 }
 
 @keyframes teaseup{
@@ -89,6 +107,12 @@ hr.style-3 {
 	transition: all 1.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 	animation-name: brightup;
 	animation-duration: 1s;
+}
+
+#projects-background{
+	width: 100%;
+	height: 100%;
+	background: url('');
 }
 
 @keyframes brightup{
