--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,9 +5,8 @@ html, body {
 	height: 100%;
 	font-family: 'VCR OSD Mono';
 	color: white;
-	overflow: hidden;
 }
-
+	
 a{
 	text-decoration: none;
 	color: white;
@@ -30,6 +29,7 @@ hr.style-3 {
 	margin-left: 15px;
 }
 
+
 #ui-overlay-container{
 	transition: all 1.3s cubic-bezier(0.86, 0, 0.07, 1);
 }
@@ -48,12 +48,38 @@ hr.style-3 {
 	width: 100%;
 }
 
+#bottom-bar{
+	width: 100%;
+	background-color: white;
+	height: 2px;
+	overflow-y: none;
+	position: relative;
+}
+
+.project-category:hover{
+	cursor: pointer;
+}
+
+.project-dot{
+	height: 15px;
+	width: 15px;
+	left: 50%;
+	border-radius: 50%;
+	color: white;
+	border: 2px solid white;
+	position: absolute;
+	transform: translate(0%,-42%);
+	vertical-align: middle;
+	background-color: white;
+}
+
 
 #resume-container{
 	position: absolute;
 	top: 1000%;
 	transition: all 1.4s cubic-bezier(0.23, 1, 0.32, 1);
 	opacity: 0;
+	visibility: hidden;
 }
 
 #resume-frame{
@@ -112,7 +138,11 @@ hr.style-3 {
 #projects-background{
 	width: 100%;
 	height: 100%;
-	background: url('');
+	background-color: black;
+	position: absolute;
+	top: 0%;
+	background-image: url(../css/img/duotonesky.png);
+	background-size: cover;
 }
 
 @keyframes brightup{
