--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -75,7 +75,7 @@ hr.style-3 {
 }
 
 #project-super-container{
-	width: 400%;
+	width: 400vw;
 }
 
 .project-category{
@@ -132,7 +132,7 @@ hr.style-3 {
 #project-bar{
 	width: 100%;
 	margin: 0;
-	font-size: 36pt;
+	font-size: ;
 }
 
 #up-arrow{
