--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -181,7 +181,7 @@ hr.style-3 {
 }
 
 .contact-link{
-	font-size: 2vw;
+	font-size: 14pt;
 	transition: all 0.5s cubic-bezier(0,.82,.4,1);
 	opacity: 0.5;
 }
